@@ -60,6 +60,8 @@ public class HSAdmin extends Configured implements Tool {
           .println("Usage: mapred hsadmin [-refreshSuperUserGroupsConfiguration]");
     } else if ("-refreshAdminAcls".equals(cmd)) {
       System.err.println("Usage: mapred hsadmin [-refreshAdminAcls]");
+    } else if ("-refreshLoadedJobCache".equals(cmd)) {
+      System.err.println("Usage: mapred hsadmin [-refreshLoadedJobCache]");
     } else if ("-refreshJobRetentionSettings".equals(cmd)) {
       System.err
           .println("Usage: mapred hsadmin [-refreshJobRetentionSettings]");
@@ -73,6 +75,7 @@ public class HSAdmin extends Configured implements Tool {
       System.err.println("           [-refreshUserToGroupsMappings]");
       System.err.println("           [-refreshSuperUserGroupsConfiguration]");
       System.err.println("           [-refreshAdminAcls]");
+      System.err.println("           [-refreshLoadedJobCache]");
       System.err.println("           [-refreshJobRetentionSettings]");
       System.err.println("           [-refreshLogRetentionSettings]");
       System.err.println("           [-getGroups [username]]");
@@ -89,6 +92,7 @@ public class HSAdmin extends Configured implements Tool {
         + " [-refreshUserToGroupsMappings]"
         + " [-refreshSuperUserGroupsConfiguration]"
         + " [-refreshAdminAcls]"
+        + " [-refreshLoadedJobCache]"
         + " [-refreshLogRetentionSettings]"
         + " [-refreshJobRetentionSettings]"
         + " [-getGroups [username]]" + " [-help [cmd]]\n";
@@ -99,13 +103,14 @@ public class HSAdmin extends Configured implements Tool {
 
     String refreshAdminAcls = "-refreshAdminAcls: Refresh acls for administration of Job history server\n";
 
+    String refreshLoadedJobCache = "-refreshLoadedJobCache: Refresh loaded job cache of Job history server\n";
+
     String refreshJobRetentionSettings = "-refreshJobRetentionSettings:" + 
         "Refresh job history period,job cleaner settings\n";
 
     String refreshLogRetentionSettings = "-refreshLogRetentionSettings:" + 
         "Refresh log retention period and log retention check interval\n";
     
-
     String getGroups = "-getGroups [username]: Get the groups which given user belongs to\n";
 
     String help = "-help [cmd]: \tDisplays help for the given command or all commands if none\n"
@@ -119,6 +124,8 @@ public class HSAdmin extends Configured implements Tool {
       System.out.println(refreshSuperUserGroupsConfiguration);
     } else if ("refreshAdminAcls".equals(cmd)) {
       System.out.println(refreshAdminAcls);
+    } else if ("refreshLoadedJobCache".equals(cmd)) {
+      System.out.println(refreshLoadedJobCache);
     } else if ("refreshJobRetentionSettings".equals(cmd)) {
       System.out.println(refreshJobRetentionSettings);
     } else if ("refreshLogRetentionSettings".equals(cmd)) {
@@ -130,6 +137,7 @@ public class HSAdmin extends Configured implements Tool {
       System.out.println(refreshUserToGroupsMappings);
       System.out.println(refreshSuperUserGroupsConfiguration);
       System.out.println(refreshAdminAcls);
+      System.out.println(refreshLoadedJobCache);
       System.out.println(refreshJobRetentionSettings);
       System.out.println(refreshLogRetentionSettings);
       System.out.println(getGroups);
@@ -221,6 +229,22 @@ public class HSAdmin extends Configured implements Tool {
     return 0;
   }
 
+  private int refreshLoadedJobCache() throws IOException {
+    // Refresh the loaded job cache
+    Configuration conf = getConf();
+    InetSocketAddress address = conf.getSocketAddr(
+        JHAdminConfig.JHS_ADMIN_ADDRESS,
+        JHAdminConfig.DEFAULT_JHS_ADMIN_ADDRESS,
+        JHAdminConfig.DEFAULT_JHS_ADMIN_PORT);
+
+    HSAdminRefreshProtocol refreshProtocol = HSProxies.createProxy(conf,
+        address, HSAdminRefreshProtocol.class,
+        UserGroupInformation.getCurrentUser());
+
+    refreshProtocol.refreshLoadedJobCache();
+    return 0;
+  }
+    
   private int refreshJobRetentionSettings() throws IOException {
     // Refresh job retention settings
     Configuration conf = getConf();
@@ -267,6 +291,7 @@ public class HSAdmin extends Configured implements Tool {
     if ("-refreshUserToGroupsMappings".equals(cmd)
         || "-refreshSuperUserGroupsConfiguration".equals(cmd)
         || "-refreshAdminAcls".equals(cmd)
+        || "-refreshLoadedJobCache".equals(cmd)
         || "-refreshJobRetentionSettings".equals(cmd)
         || "-refreshLogRetentionSettings".equals(cmd)) {
       if (args.length != 1) {
@@ -282,6 +307,8 @@ public class HSAdmin extends Configured implements Tool {
       exitCode = refreshSuperUserGroupsConfiguration();
     } else if ("-refreshAdminAcls".equals(cmd)) {
       exitCode = refreshAdminAcls();
+    } else if ("-refreshLoadedJobCache".equals(cmd)) {
+      exitCode = refreshLoadedJobCache();
     } else if ("-refreshJobRetentionSettings".equals(cmd)) {
       exitCode = refreshJobRetentionSettings();
     } else if ("-refreshLogRetentionSettings".equals(cmd)) {
