@@ -27,6 +27,7 @@ import org.apache.hadoop.ipc.ProtocolMetaInterface;
 import org.apache.hadoop.ipc.RPC;
 import org.apache.hadoop.ipc.RpcClientUtil;
 import org.apache.hadoop.mapreduce.v2.hs.proto.HSAdminRefreshProtocolProtos.RefreshAdminAclsRequestProto;
+import org.apache.hadoop.mapreduce.v2.hs.proto.HSAdminRefreshProtocolProtos.RefreshLoadedJobCacheRequestProto;
 import org.apache.hadoop.mapreduce.v2.hs.proto.HSAdminRefreshProtocolProtos.RefreshJobRetentionSettingsRequestProto;
 import org.apache.hadoop.mapreduce.v2.hs.proto.HSAdminRefreshProtocolProtos.RefreshLogRetentionSettingsRequestProto;
 import org.apache.hadoop.mapreduce.v2.hs.protocol.HSAdminRefreshProtocol;
@@ -45,6 +46,10 @@ public class HSAdminRefreshProtocolClientSideTranslatorPB implements
 
   private final static RefreshAdminAclsRequestProto 
     VOID_REFRESH_ADMIN_ACLS_REQUEST = RefreshAdminAclsRequestProto
+      .newBuilder().build();
+
+  private final static RefreshLoadedJobCacheRequestProto 
+    VOID_REFRESH_LOADED_JOB_CACHE_REQUEST = RefreshLoadedJobCacheRequestProto
       .newBuilder().build();
   
   private final static RefreshJobRetentionSettingsRequestProto 
@@ -75,6 +80,17 @@ public class HSAdminRefreshProtocolClientSideTranslatorPB implements
     }
   }
 
+
+  @Override
+  public void refreshLoadedJobCache() throws IOException {
+    try {
+      rpcProxy.refreshLoadedJobCache(NULL_CONTROLLER,
+          VOID_REFRESH_LOADED_JOB_CACHE_REQUEST);
+    } catch (ServiceException se) {
+      throw ProtobufHelper.getRemoteException(se);
+    }
+  }
+  
   @Override
   public void refreshJobRetentionSettings() throws IOException {
     try {
@@ -101,4 +117,5 @@ public class HSAdminRefreshProtocolClientSideTranslatorPB implements
         HSAdminRefreshProtocolPB.class, RPC.RpcKind.RPC_PROTOCOL_BUFFER,
         RPC.getProtocolVersion(HSAdminRefreshProtocolPB.class), methodName);
   }
+
 }
