@@ -23,6 +23,8 @@ import java.io.IOException;
 import org.apache.hadoop.classification.InterfaceAudience.Private;
 import org.apache.hadoop.mapreduce.v2.hs.proto.HSAdminRefreshProtocolProtos.RefreshAdminAclsResponseProto;
 import org.apache.hadoop.mapreduce.v2.hs.proto.HSAdminRefreshProtocolProtos.RefreshAdminAclsRequestProto;
+import org.apache.hadoop.mapreduce.v2.hs.proto.HSAdminRefreshProtocolProtos.RefreshLoadedJobCacheRequestProto;
+import org.apache.hadoop.mapreduce.v2.hs.proto.HSAdminRefreshProtocolProtos.RefreshLoadedJobCacheResponseProto;
 import org.apache.hadoop.mapreduce.v2.hs.proto.HSAdminRefreshProtocolProtos.RefreshJobRetentionSettingsRequestProto;
 import org.apache.hadoop.mapreduce.v2.hs.proto.HSAdminRefreshProtocolProtos.RefreshJobRetentionSettingsResponseProto;
 import org.apache.hadoop.mapreduce.v2.hs.proto.HSAdminRefreshProtocolProtos.RefreshLogRetentionSettingsRequestProto;
@@ -41,11 +43,15 @@ public class HSAdminRefreshProtocolServerSideTranslatorPB implements
   private final static RefreshAdminAclsResponseProto 
     VOID_REFRESH_ADMIN_ACLS_RESPONSE = RefreshAdminAclsResponseProto
       .newBuilder().build();
-  
+
+  private final static RefreshLoadedJobCacheResponseProto 
+    VOID_REFRESH_LOADED_JOB_CACHE_RESPONSE = RefreshLoadedJobCacheResponseProto
+      .newBuilder().build();
+
   private final static RefreshJobRetentionSettingsResponseProto 
     VOID_REFRESH_JOB_RETENTION_SETTINGS_RESPONSE = 
       RefreshJobRetentionSettingsResponseProto.newBuilder().build();
-  
+
   private final static RefreshLogRetentionSettingsResponseProto 
     VOID_REFRESH_LOG_RETENTION_SETTINGS_RESPONSE = 
       RefreshLogRetentionSettingsResponseProto.newBuilder().build();
@@ -65,6 +71,18 @@ public class HSAdminRefreshProtocolServerSideTranslatorPB implements
       throw new ServiceException(e);
     }
     return VOID_REFRESH_ADMIN_ACLS_RESPONSE;
+  }
+
+  @Override
+  public RefreshLoadedJobCacheResponseProto refreshLoadedJobCache(
+      RpcController controller, RefreshLoadedJobCacheRequestProto request)
+      throws ServiceException {
+    try {
+      impl.refreshLoadedJobCache();
+    } catch (IOException e) {
+      throw new ServiceException(e);
+    }
+    return VOID_REFRESH_LOADED_JOB_CACHE_RESPONSE;
   }
 
   @Override
