@@ -18,6 +18,8 @@
 
 package org.apache.hadoop.mapreduce.v2.hs;
 
+import java.util.Map;
+
 import java.io.IOException;
 import java.util.LinkedList;
 import java.util.List;
@@ -27,8 +29,10 @@ import org.apache.hadoop.fs.FileContext;
 import org.apache.hadoop.fs.FileStatus;
 import org.apache.hadoop.fs.Path;
 import org.apache.hadoop.mapreduce.v2.api.records.JobId;
+import org.apache.hadoop.mapreduce.v2.api.records.JobState;
 import org.apache.hadoop.mapreduce.v2.hs.HistoryFileManager.HistoryFileInfo;
 import org.apache.hadoop.mapreduce.v2.hs.HistoryFileManager.JobListCache;
+import org.apache.hadoop.mapreduce.v2.hs.webapp.dao.JobsInfo;
 import org.apache.hadoop.mapreduce.v2.jobhistory.JHAdminConfig;
 import org.apache.hadoop.mapreduce.v2.jobhistory.JobHistoryUtils;
 import org.junit.After;
@@ -36,10 +40,75 @@ import org.junit.Test;
 
 import static org.junit.Assert.assertEquals;
 import static org.mockito.Mockito.*;
+import org.apache.hadoop.mapreduce.v2.app.job.Job;
+
+import static org.junit.Assert.assertFalse;
+import static org.junit.Assert.assertTrue;
 
 public class TestJobHistory {
 
   JobHistory jobHistory = null;
+
+  @Test
+  public void testRefreshLoadedJobCache() throws Exception {
+    HistoryFileManager historyManager = mock(HistoryFileManager.class);
+    jobHistory = spy(new JobHistory());
+    doReturn(historyManager).when(jobHistory).createHistoryFileManager();
+
+    Configuration conf = new Configuration();
+    // Set the cache size to 2
+    conf.set(JHAdminConfig.MR_HISTORY_LOADED_JOB_CACHE_SIZE, "2");
+    jobHistory.init(conf);
+    jobHistory.start();
+
+    CachedHistoryStorage storage = spy((CachedHistoryStorage) jobHistory
+        .getHistoryStorage());
+
+    Job[] jobs = new Job[3];
+    JobId[] jobIds = new JobId[3];
+
+    for (int i = 0; i < 3; i++) {
+      jobs[i] = mock(Job.class);
+      jobIds[i] = mock(JobId.class);
+      when(jobs[i].getID()).thenReturn(jobIds[i]);
+    }
+
+    HistoryFileInfo fileInfo = mock(HistoryFileInfo.class);
+    when(historyManager.getFileInfo(any(JobId.class))).thenReturn(fileInfo);
+    when(fileInfo.loadJob()).thenReturn(jobs[0]).thenReturn(jobs[1])
+        .thenReturn(jobs[2]);
+
+    // getFullJob will put the job in the cache if it isn't there
+    for (int i = 0; i < 3; i++) {
+      storage.getFullJob(jobs[i].getID());
+    }
+
+    Map<JobId, Job> jobCache = storage.getLoadedJobCache();
+    // job0 should have been purged since cache size is 2
+    assertFalse(jobCache.containsKey(jobs[0].getID()));
+    assertTrue(jobCache.containsKey(jobs[1].getID())
+        && jobCache.containsKey(jobs[2].getID()));
+
+    // Setting cache size to 3
+    conf.set(JHAdminConfig.MR_HISTORY_LOADED_JOB_CACHE_SIZE, "3");
+    doReturn(conf).when(storage).createConf();
+
+    when(fileInfo.loadJob()).thenReturn(jobs[0]).thenReturn(jobs[1])
+        .thenReturn(jobs[2]);
+
+    jobHistory.refreshLoadedJobCache();
+
+    for (int i = 0; i < 3; i++) {
+      storage.getFullJob(jobs[i].getID());
+    }
+
+    jobCache = storage.getLoadedJobCache();
+
+    // All three jobs should be in cache since its size is now 3
+    for (int i = 0; i < 3; i++) {
+      assertTrue(jobCache.containsKey(jobs[i].getID()));
+    }
+  }
 
   @Test
   public void testRefreshJobRetentionSettings() throws IOException,
@@ -147,6 +216,54 @@ public class TestJobHistory {
     verify(fileInfo, timeout(20000).times(2)).delete();
   }
 
+  @Test
+  public void testRefreshLoadedJobCacheUnSupportedOperation() {
+    jobHistory = spy(new JobHistory());
+    HistoryStorage storage = new HistoryStorage() {
+
+      @Override
+      public void setHistoryFileManager(HistoryFileManager hsManager) {
+        // TODO Auto-generated method stub
+
+      }
+
+      @Override
+      public JobsInfo getPartialJobs(Long offset, Long count, String user,
+          String queue, Long sBegin, Long sEnd, Long fBegin, Long fEnd,
+          JobState jobState) {
+        // TODO Auto-generated method stub
+        return null;
+      }
+
+      @Override
+      public Job getFullJob(JobId jobId) {
+        // TODO Auto-generated method stub
+        return null;
+      }
+
+      @Override
+      public Map<JobId, Job> getAllPartialJobs() {
+        // TODO Auto-generated method stub
+        return null;
+      }
+    };
+
+    doReturn(storage).when(jobHistory).createHistoryStorage();
+
+    jobHistory.init(new Configuration());
+
+    jobHistory.start();
+
+    Throwable th = null;
+    try {
+      jobHistory.refreshLoadedJobCache();
+    } catch (Exception e) {
+      th = e;
+    }
+
+    assertTrue(th instanceof UnsupportedOperationException);
+  }
+  
   @After
   public void cleanUp() {
     if (jobHistory != null) {
