@@ -15,6 +15,9 @@ Release 2.3.0 - UNRELEASED
     MAPREDUCE-5386. Ability to refresh history server job retention and job
     cleaner settings (Ashwin Shankar via jlowe)
 
+    MAPREDUCE-5411. Refresh size of loaded job cache on history server (Ashwin
+    Shankar via jlowe)
+
   IMPROVEMENTS
 
   OPTIMIZATIONS
